--- a/Admin/Pages/Index.cshtml
+++ b/Admin/Pages/Index.cshtml
@@ -7,12 +7,32 @@
 
 <div class="container">
     <div class="row align-items-center">
-        <div class="col-sm py-3">
+        <div class="col-4-sm py-3">
             <div class="card home-page-card">
                 <div class="card-body">
-                    <h5 class="card-title">Courses</h5>
+                    <h2 class="card-title">Courses</h2>
                     <p class="card-text">Click here to create, view or edit courses</p>
                     <a href="./Courses" class="btn btn-primary">View</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-4-sm py-3">
+            <div class="card home-page-card">
+                <div class="card-body">
+                    <h2 class="card-title">Departments</h2>
+                    <p class="card-text">Click here to create, view or edit Departments</p>
+                    <a href="./Departments" class="btn btn-primary">View</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-4-sm py-3">
+            <div class="card home-page-card">
+                <div class="card-body">
+                    <h2 class="card-title">Disciplines</h2>
+                    <p class="card-text">Click here to create, view or edit Disciplines</p>
+                    <a href="./Disciplines" class="btn btn-primary">View</a>
                 </div>
             </div>
         </div>
