--- a/Admin/Pages/Shared/_Layout.cshtml
+++ b/Admin/Pages/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    
 </head>
 
 @{
@@ -49,8 +50,14 @@
                         <li class="nav-item" id="navHome">
                             <a class="nav-link rememberIfVisited" href="/Index">Home</a>
                         </li>
-                        <li class="nav-item" id="navCertificates">
+                        <li class="nav-item" id="navCourses">
                             <a class="nav-link rememberIfVisited" href="/Courses">Courses</a>
+                        </li>
+                        <li class="nav-item" id="navCourses">
+                            <a class="nav-link rememberIfVisited" href="/Departments">Departments</a>
+                        </li>
+                        <li class="nav-item" id="navCourses">
+                            <a class="nav-link rememberIfVisited" href="/Disciplines">Disciplines</a>
                         </li>
                     </ul>
                 </div>
