--- a/Admin/Pages/Courses/Create.cshtml
+++ b/Admin/Pages/Courses/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model CreateModel
+@model Admin.Pages.Courses.CreateModel
 
 @{
     ViewData["Title"] = "Create";
@@ -13,7 +13,7 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <span asp-validation-for="Course" class="text-danger"></span>
-            <input type="hidden" asp-for="Course.Active" value="1"/>
+            <input type="hidden" asp-for="Course.Active" value="1" />
             <div class="form-group">
                 <label asp-for="Course.Code" class="control-label"></label>
                 <input asp-for="Course.Code" class="form-control" />
@@ -54,6 +54,26 @@
                 <input asp-for="Course.Hours" class="form-control" />
                 <span asp-validation-for="Course.Hours" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Course.Active" class="control-label"></label>
+                <input asp-for="Course.Active" class="form-control" />
+                <span asp-validation-for="Course.Active" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Course.TypeID" class="control-label"></label>
+                <input asp-for="Course.TypeID" class="form-control" />
+                <span asp-validation-for="Course.TypeID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Course.DepartmentID" class="control-label"></label>
+                <input asp-for="Course.DepartmentID" class="form-control" />
+                <span asp-validation-for="Course.DepartmentID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Course.DisciplineID" class="control-label"></label>
+                <input asp-for="Course.DisciplineID" class="form-control" />
+                <span asp-validation-for="Course.DisciplineID" class="text-danger"></span>
+            </div> 
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
