--- a/Admin/Pages/Courses/Index.cshtml
+++ b/Admin/Pages/Courses/Index.cshtml
@@ -4,56 +4,113 @@
 
 @{
     ViewData["Title"] = "Courses";
-    ViewData["HideBodyOverflow"] = false;
+    ViewData["HideBodyOverflow"] = true;
 
+    string? filterValue = Model.Filter;
+    if (filterValue != null)
+    {
+        filterValue = filterValue.Trim();
+    }
 
-    <h1>Courses</h1>
-
-    <table style="width:100%;">
-        <tr>
-            <th>Code</th>
-            <th>Title</th>
-            <th>Hours</th>
-            <th>Type</th>
-            <th>Department</th>
-            <th>Discipline</th>
-        </tr>
-        @foreach (var item in Model.CourseList)
-        {
-
-            <tr>
-                <td><a asp-page="Details" asp-route-id="@item.Id">@item.Code</a></td>
-                <td>@item.TitleEng</td>
-                <td>@item.Hours</td>
-                @if (item.Type > 0 && item.Type < Model.CourseList.Count)
-                {
-                    <td>@Model.CourseList.ElementAt(item.Type-1).TitleEng</td>
-                }
-                else
-                {
-                    <td></td>
-                }
-                @if (item.Department >0 && item.Department < Model.DepartmentList.Count)
-                {
-                    <td>@Model.DepartmentList.ElementAt(item.Department-1).NameEng</td>
-                }
-                else
-                {
-                    <td></td>
-                }
-                @if (item.Discipline > 0 && item.Discipline < Model.DisciplineList.Count)
-                {
-                    <td>@Model.DisciplineList.ElementAt(item.Discipline-1).NameEng</td>
-                }
-                else
-                {
-                    <td></td>
-                }
-            </tr>
-        }
-    </table>
-
-    <div>
-    <a href="/Courses/Create" class="btn btn-primary">Ceate new course</a>
-    </div>
+    var itemsThatMatchFilter = Model.Course.Where(x => x.Active == 1).ToList();
+    if (!string.IsNullOrWhiteSpace(Model.Filter))
+    {
+        Formatter.Filters = filterValue;
+        Formatter.PrepareFiltersArray();
+        itemsThatMatchFilter = itemsThatMatchFilter
+        .Where(x => Formatter.RowContentsMatchFilters(new string[] { x.TitleEng, x.TitleFre })).ToList();
+    }
+    itemsThatMatchFilter = itemsThatMatchFilter.OrderBy(x => x.TitleEng.ToLower()).ToList();
+    var numItems = itemsThatMatchFilter.Count();
 }
+
+<div class="collapse @(Model.DisplayTopOfPage ? "show" : "")" id="collapsibleTop" aria-expanded="@(Model.DisplayTopOfPage ? "true" : "false")">
+
+    <h1>Courses @(numItems > 0 ? "(" + numItems + ")" : "")<span class="glyphicon glyphicon-save-file pull-right index-save-file-icon" onclick="print()"></span></h1>
+    <p class="space-btns hide-in-print">
+        <a class="btn btn-dark" asp-page="Create">Create New</a>
+    </p>
+
+    <form class="hide-in-print @(numItems == 0 && string.IsNullOrWhiteSpace(Model.Filter) ? "dontShow" : "")">
+        <div class="form-actions no-color">
+            <h6>
+                <label for="Filter">Find courses:</label>
+                <input type="text" asp-for="@Model.Filter" value="@filterValue" />
+                <input type="submit" value="Search" class="btn btn-primary" />
+                @if (!String.IsNullOrWhiteSpace(Model.Filter))
+                {
+                    <span><span class="vertical-bar">|</span> <a asp-page="./Index">Back to Full List</a></span>
+                }
+            </h6>
+        </div>
+    </form>
+</div>
+
+@if (itemsThatMatchFilter.Any())
+{
+    <div id="table-container" style="max-height: @(Model.LastTableContainerHeight)px; height: @(Model.LastTableContainerHeight)px">
+        <table class="table">
+            <thead>
+                <tr class="table-header-row text-center">
+                    <th class="col-3"><b class="sort-column sorted" data-toggle="tooltip" title="Click to sort column">Code</b></th>
+                    <th><b class="sort-column sorted" data-toggle="tooltip" title="Click to sort column">Title</b></th>
+                    <th>Type</th>
+                    <th>Department</th>
+                    <th>Discipline</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                @foreach (var item in Model.CourseList)
+                {
+
+                    <tr>
+                        <td><a asp-page="Details" asp-route-id="@item.Id">@item.Code</a></td>
+                        <td>@item.TitleEng</td>
+                        @if (item.Type > 0 && item.Type < Model.CourseList.Count)
+                        {
+                            <td>@Model.CourseList.ElementAt(item.Type - 1).TitleEng</td>
+                        }
+                        else
+                        {    
+                            <td></td>
+                        }
+                        @if (item.Department > 0 && item.Department < Model.DepartmentList.Count)
+                        {
+                            <td>@Model.DepartmentList.ElementAt(item.Department - 1).NameEng</td>
+                        }
+                        else
+                        {
+                            <td></td>
+                        }
+                        @if (item.Discipline > 0 && item.Discipline < Model.DisciplineList.Count)
+                        {
+                            <td>@Model.DisciplineList.ElementAt(item.Discipline - 1).NameEng</td>
+                        }
+                        else
+                        {
+                            <td></td>
+                        }
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+
+}
+else
+{
+    if (!string.IsNullOrWhiteSpace(Model.Filter))
+    {
+        <h4 class="no-results">No certificates match the filter "@Model.Filter"</h4>
+    }
+    else
+    {
+        <h4 class="no-results">There are currently no certificates</h4>
+    }
+}
+
+<div class="medium-margin-top">
+    <a href="/Courses/Create" class="btn btn-primary">Ceate new course</a>
+</div>
+
