--- a/Admin/Pages/Courses/Delete.cshtml
+++ b/Admin/Pages/Courses/Delete.cshtml
@@ -1,87 +1,94 @@
-﻿@model DataModel.Course
-
+﻿@page
+@model Admin.Pages.Courses.DeleteModel
 @{
     ViewData["Title"] = "Delete";
 }
-
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<p class="text-danger">@Model.ErrorMessage</p>
 <div>
-    <h4>Course</h4>
+    <h4>Are you sure you want to delete this course?</h4>
+
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Code)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Course.Code)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Code)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Course.Code)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TitleEng)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Course.TitleEng)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TitleEng)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Course.TitleEng)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TitleFre)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Course.TitleFre)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TitleFre)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Course.TitleFre)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DescEng)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Course.DescEng)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DescEng)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Course.DescEng)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DescFre)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Course.DescFre)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DescFre)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Course.DescFre)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LangEng)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Course.LangEng)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LangEng)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Course.LangEng)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LangFre)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Course.LangFre)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LangFre)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Course.LangFre)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Hours)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Course.Hours)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Hours)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Course.Hours)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CourseType)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Course.CourseType)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CourseType)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Course.CourseType)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Department)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Course.Department)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Department)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Course.Department)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Discipline)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Course.Discipline)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Discipline)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Course.Discipline)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+    <form method="post">
+        <input type="hidden" asp-for="Course.Id" />
+
+        <div class="form-group space-btns">
+            <input type="submit" value="Delete" class="btn btn-danger" />
+            <a class="btn btn-secondary" href="/Courses/Details?id=@Model.Course.Id">Cancel</a>
+        </div>
     </form>
 </div>
+
+    <div>
+        <a asp-page="./Index">Back to List</a>
+    </div>
+
